added holder gui

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ language: cpp
 os: osx
 osx_image: xcode7.3
 
+branches:
+  only:
+  - master
+  
 before_install:
  - export MACOSX_DEPLOYMENT_TARGET=10.11
  - brew update; brew tap homebrew/science
