--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,8 +76,9 @@ include(GetVersionFromGitTag)
 if (GIT_FOUND)
     set (CPACK_PACKAGE_NAME ${PROJECT_NAME})
     IF(${PROJECT_NAME}_VERSION_BRANCH STREQUAL master)
+	message(STATUS "------------------------------- ${${PROJECT_NAME}_VERSION_STRING}-${${PROJECT_NAME}_VERSION_AHEAD} <> ${${PROJECT_NAME}_VERSION_STRING_FULL}")
         message(STATUS "Neutrino branch: ${${PROJECT_NAME}_VERSION_BRANCH}")
-        set (CPACK_PACKAGE_VERSION "${${PROJECT_NAME}_VERSION_STRING}-${${PROJECT_NAME}_VERSION_AHEAD}")
+        set (CPACK_PACKAGE_VERSION "${${PROJECT_NAME}_VERSION_STRING}${${PROJECT_NAME}_VERSION_AHEAD}")
     ELSE()
         message(STATUS "${${PROJECT_NAME}_VERSION_BRANCH} : ${${PROJECT_NAME}_VERSION_STRING} : ${${PROJECT_NAME}_VERSION_AHEAD}")
         set (CPACK_PACKAGE_VERSION "${${PROJECT_NAME}_VERSION_BRANCH}")
