fix HDF for linux

--- a/plugins/OpenHDF5/CMakeLists.txt
+++ b/plugins/OpenHDF5/CMakeLists.txt
@@ -1,16 +1,19 @@
-#libhdf5_hl
 
-find_package(HDF5 COMPONENTS CXX)
+
+find_package(HDF5 COMPONENTS HL)
 find_library(HDF5HL NAMES hdf5_hl PATHS ${HDF5_LIBRARY_DIRS})
 
-if (HDF5_FOUND AND NOT ${HDF5HL} STREQUAL "HDF5HL-NOTFOUND")
+message(STATUS "${HDF5_FOUND} : ${HDF5HL} : ${HDF5_HL_LIBRARIES}")
+
+
+if (HDF5_FOUND AND HDF5_HL_LIBRARIES)
     #hdf5 libs
     include_directories(${HDF5_INCLUDE_DIRS})
     set(LOCAL_LIBS ${LOCAL_LIBS} ${HDF5_LIBRARIES})
     add_definitions(-DHAVE_HDF5)
 
     # hdf5_hl
-    set(LOCAL_LIBS ${LOCAL_LIBS} ${HDF5HL})
+    set(LOCAL_LIBS ${LOCAL_LIBS} ${HDF5_LIBRARIES} ${HDF5_HL_LIBRARIES})
     add_definitions(-DHAVE_LIBHDF5HL)
 
 
