revert to working wavelet

--- a/plugins/OpenHDF5/CMakeLists.txt
+++ b/plugins/OpenHDF5/CMakeLists.txt
@@ -3,7 +3,7 @@
 find_package(HDF5 COMPONENTS HL)
 find_library(HDF5HL NAMES hdf5_hl PATHS ${HDF5_LIBRARY_DIRS})
 
-message(STATUS "${HDF5_FOUND} : ${HDF5HL} : ${HDF5_HL_LIBRARIES}")
+message(STATUS "${HDF5_FOUND} : ${HDF5_LIBRARIES} : ${HDF5HL} : ${HDF5_HL_LIBRARIES}")
 
 
 if (HDF5_FOUND AND HDF5_HL_LIBRARIES)
