--- a/resources/neutrino.plist
+++ b/resources/neutrino.plist
@@ -2,82 +2,56 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleDevelopmentRegion</key>
+	<string>English</string>
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
 			<key>CFBundleTypeExtensions</key>
 			<array>
-				<string>neus</string>
-			</array>
-			<key>CFBundleTypeIconFile</key>
-			<string>@ICON@</string>
-			<key>CFBundleTypeName</key>
-			<string>NeutrinoSession</string>
-			<key>CFBundleTypeRole</key>
-			<string>Viewer</string>
-			<key>LSItemContentTypes</key>
-			<array>
-				<string>public.image</string>
-			</array>
-		</dict>
-		<dict>
-			<key>CFBundleTypeExtensions</key>
-			<array>
-				<string>neu</string>
 				<string>sif</string>
-				<string>img</string>
-				<string>hdf</string>
-				<string>h5</string>
-				<string>inf</string>
+				<string>neus</string>
+				<string>neu</string>
 				<string>fits</string>
-				<string>b16</string>
-				<string>imd</string>
-				<string>txt</string>
-				<string>tif</string>
 				<string>tiff</string>
-				<string>gif</string>
+				<string>hdf</string>
+				<string>img</string>
 			</array>
 			<key>CFBundleTypeIconFile</key>
-			<string>@ICON@</string>
+			<string>filetype.icns</string>
 			<key>CFBundleTypeName</key>
-			<string>NeutrinoImage</string>
+			<string>Neutrino session</string>
 			<key>CFBundleTypeRole</key>
 			<string>Viewer</string>
-			<key>LSItemContentTypes</key>
-			<array>
-				<string>public.image</string>
-			</array>
 		</dict>
 	</array>
-	<key>CFBundleDevelopmentRegion</key>
-	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>${APPLE_GUI_EXECUTABLE}</string>
+	<string>Neutrino</string>
 	<key>CFBundleGetInfoString</key>
-	<string>${APPLE_GUI_INFO_STRING}</string>
+	<string>Neutrino </string>
 	<key>CFBundleIconFile</key>
-	<string>${APPLE_GUI_ICON}</string>
+	<string>icon.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>${APPLE_GUI_IDENTIFIER}</string>
+	<string>.</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleLongVersionString</key>
-	<string>${APPLE_GUI_LONG_VERSION_STRING}</string>
+	<string>Neutrino </string>
 	<key>CFBundleName</key>
-	<string>${APPLE_GUI_BUNDLE_NAME}</string>
+	<string>Neutrino</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>${APPLE_GUI_SHORT_VERSION_STRING}</string>
+	<string></string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>${APPLE_GUI_BUNDLE_VERSION}</string>
+	<string>Neutrino </string>
 	<key>CSResourcesFileMapped</key>
 	<true/>
-	<key>LSRequiresCarbon</key>
+	<key>NSHighResolutionCapable</key>
 	<true/>
 	<key>NSHumanReadableCopyright</key>
-	<string>${APPLE_GUI_COPYRIGHT}</string>
+	<string> </string>
 </dict>
 </plist>
