--- a/plugins/Shell/CMakeLists.txt
+++ b/plugins/Shell/CMakeLists.txt
@@ -12,28 +12,16 @@ if(PYTHONLIBS_FOUND)
 	if(PYTHONINTERP_FOUND)
 
 		if (PYTHON_EXECUTABLE)
-			file(
-				WRITE ${CMAKE_CURRENT_BINARY_DIR}/determineNumpyPath.py "
-try:
-    import numpy; print(numpy.get_include())
-except Exception as exc:
-    print(exc)
-")
-
-            exec_program(
-				"${PYTHON_EXECUTABLE}"
-				ARGS "\"${CMAKE_CURRENT_BINARY_DIR}/determineNumpyPath.py\""
-				OUTPUT_VARIABLE NUMPY_PATH)
-
+			file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/determineNumpyPath.py "try: import numpy; print numpy.get_include()\nexcept: pass\n")
+			exec_program("${PYTHON_EXECUTABLE}" ARGS "\"${CMAKE_CURRENT_BINARY_DIR}/determineNumpyPath.py\"" OUTPUT_VARIABLE NUMPY_PATH)
 		endif (PYTHON_EXECUTABLE)
 
 		find_path(
-			NUMPY_INCLUDE_DIR numpy/arrayobject.h
-			"${NUMPY_PATH}"
-			"${PYTHON_INCLUDE_PATH}"
-			DOC
-			"Directory where the arrayobject.h header file can be found. \
-			This file is part of the numpy package")
+			NUMPY_INCLUDE_DIR
+			NAMES "numpy/arrayobject.h"
+			PATHS "${NUMPY_PATH}" "${PYTHON_INCLUDE_PATH}"
+			DOC "Directory where the arrayobject.h header file can be found."
+		)
 
 		if (NUMPY_INCLUDE_DIR)
 			message(STATUS "Found NumPy includes: ${NUMPY_INCLUDE_DIR}")
