check for updates on statup

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -227,7 +227,7 @@ SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
 target_link_libraries(Neutrino ${LIBS})
 
-qt5_use_modules(Neutrino Core Gui Sql Widgets Svg PrintSupport UiTools Multimedia MultimediaWidgets)
+qt5_use_modules(Neutrino Core Gui Sql Widgets Svg PrintSupport UiTools Multimedia MultimediaWidgets Network)
 
 
 
