--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: cpp
 
 os: osx
-osx_image: xcode8
+osx_image: xcode7.3
 
 branches:
   only:
@@ -29,11 +29,13 @@ script:
  - mkdir -p build_dir && cd build_dir
  - cmake -DCMAKE_CXX_COMPILER=g++-7 -DQt5_DIR=/usr/local/opt/qt5/lib/cmake/Qt5  ..
  - make
+ - otool -L Neutrino.app/Contents/MacOS/Neutrino
 
 install:
 
 before_deploy:
  - ../resources/macPackage/prepareapp.sh
+ - otool -L prepareapp/Neutrino.app/Contents/MacOS/Neutrino
     
 deploy:
   provider: releases
