--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: cpp
 
 os: osx
+osx_image: xcode9.2
 
 branches:
   only:
@@ -13,9 +14,7 @@ git:
 before_install:
  - brew update; brew tap iltommi/brews
  - brew install --only-dependencies gcc
- - brew install gcc 2>&1
- - brew link --overwrite gcc 
- - brew install qt5 cfitsio hdf4 hdf5 gsl clfft pandoc
+ - brew install gcc qt5 cfitsio hdf4 hdf5 gsl clfft pandoc
  - brew install fftw --with-openmp
  - git clone https://github.com/iltommi/PythonQt.git
  - cd PythonQt
