--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ git:
 before_install:
  - brew update; brew tap iltommi/brews
  - brew install --only-dependencies gcc
+ - brew cask uninstall oclint
  - brew install gcc qt5 cfitsio hdf4 hdf5 gsl clfft pandoc
  - brew install fftw --with-openmp
  - git clone https://github.com/iltommi/PythonQt.git
