--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "macdeployqtfix"]
 	path = macdeployqtfix
 	url = https://github.com/iltommi/macdeployqtfix.git
+[submodule "PythonQt"]
+	path = PythonQt
+	url = https://github.com/iltommi/PythonQt.git
