--- a/.travis.yml
+++ b/.travis.yml
@@ -17,28 +17,20 @@ before_install:
  - brew cask uninstall oclint
  - brew install gcc qt5 cfitsio hdf4 hdf5 gsl clfft pandoc
  - brew install fftw --with-openmp
- - git clone https://github.com/iltommi/PythonQt.git
- - cd PythonQt
  - mkdir my_build && cd my_build
- - cmake -DCMAKE_CXX_COMPILER=g++-7 -DQt5_DIR=/usr/local/opt/qt5/lib/cmake/Qt5 -UQT_QMAKE_EXECUTABLE -DPythonQt_Wrap_QtAll=TRUE ..
+ - cmake -DCMAKE_CXX_COMPILER=g++-7 -DQt5_DIR=/usr/local/opt/qt5/lib/cmake/Qt5 -UQT_QMAKE_EXECUTABLE -DPythonQt_Wrap_QtAll=TRUE ../PythonQt
  - make install
- - cd ../..
+ - cd ..
 
 script:
  - mkdir -p build_dir && cd build_dir
- - cmake -DCMAKE_CXX_COMPILER=g++-7 -DQt5_DIR=/usr/local/opt/qt5/lib/cmake/Qt5  ..
+ - cmake -DCMAKE_CXX_COMPILER=g++-7 ..
  - make
- - otool -L Neutrino.app/Contents/MacOS/Neutrino
- - ls -l /usr/local/opt/libtiff/lib/
- - otool -L /usr/local/opt/libtiff/lib/libtiff.dylib
- - ls -l /usr/local/opt/libjpeg/lib/
- - otool -L /usr/local/opt/libjpeg/lib/libjpeg.dylib
 
 install:
 
 before_deploy:
  - ../resources/macPackage/prepareapp.sh
- - otool -L prepareapp/Neutrino.app/Contents/MacOS/Neutrino
     
 deploy:
   provider: releases
