--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,13 @@ git:
   depth: 9999999
   
 before_install:
- - brew update; brew tap iltommi/brews
+ - brew update
  - brew install --only-dependencies gcc
  - brew cask uninstall oclint
- - brew install gcc qt5 cfitsio hdf4 hdf5 gsl clfft pandoc
- - brew install fftw --with-openmp
+ - brew install gcc qt5 cfitsio hdf5 gsl clfft pandoc
+ - brew tap iltommi/brews
+ - brew install iltommi/brews/hdf4
+ - brew install iltommi/brews/fftw
  - mkdir my_build && cd my_build
  - cmake -DCMAKE_CXX_COMPILER=g++-7 -DQt5_DIR=/usr/local/opt/qt5/lib/cmake/Qt5 -UQT_QMAKE_EXECUTABLE -DPythonQt_Wrap_QtAll=TRUE ../PythonQt
  - make install
