TRAVIS: fix macos name

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,9 @@ script:
  - mkdir -p build_dir && cd build_dir
  - cmake -DCMAKE_CXX_COMPILER=g++-7 ..
  - make
+ - export dmg_file=Neutrino$(git describe --abbrev=0 --tags)$(git rev-list --count HEAD)-macos
+ - cp Neutrino.dmg $dmg_file
+
 
 install:
 
@@ -38,7 +41,7 @@ deploy:
   provider: releases
   api_key: $github_token
   file_glob: true
-  file: "Neutrino.dmg"
+  file: $dmg_file
   skip_cleanup: true
   overwrite: true
   on:
