fix fedora build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,7 +116,7 @@ if (LINUX)
         message (STATUS "[${DISTRO}] Using CPackDeb for packaging")
 
         set(CPACK_INSTALL_PREFIX "/usr")
-        set(CPACK_GENERATOR ${CPACK_GENERATOR} TGZ STGZ DEB)
+		set(CPACK_GENERATOR ${CPACK_GENERATOR} TGZ DEB)
 
         set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
 
@@ -139,7 +139,8 @@ if (LINUX)
         # install goodies
         install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/resources/linuxPackage/debian/neutrino.menu DESTINATION share/menu RENAME neutrino)
         install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/resources/icons/icon.svg DESTINATION share/pixmaps RENAME neutrino.svg)
-
+	if (DISTRO MATCHES "Fedora")
+		set(CPACK_GENERATOR ${CPACK_GENERATOR} TGZ RPM)
     endif()
 endif()
 
