--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,7 +109,7 @@ if (LINUX)
 	execute_process(COMMAND "lsb_release" "-cs" OUTPUT_VARIABLE DISTRO_CODE)
 	string(REGEX REPLACE "\n" "" DISTRO_CODE ${DISTRO_CODE})
 
-	set (CPACK_PACKAGE_VERSION "${${PROJECT_NAME}_VERSION_STRING}${${PROJECT_NAME}_VERSION_AHEAD}-${DISTRO}")
+	set (CPACK_PACKAGE_VERSION "${DISTRO}")
 
     if (DISTRO MATCHES "Debian" OR DISTRO MATCHES "Ubuntu" OR DISTRO MATCHES "LinuxMint")
 
@@ -140,8 +140,14 @@ if (LINUX)
         install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/resources/linuxPackage/debian/neutrino.menu DESTINATION share/menu RENAME neutrino)
         install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/resources/icons/icon.svg DESTINATION share/pixmaps RENAME neutrino.svg)
 	elseif (DISTRO MATCHES "Fedora")
+		execute_process(COMMAND uname -m OUTPUT_VARIABLE CPACK_RPM_PACKAGE_ARCHITECTURE OUTPUT_STRIP_TRAILING_WHITESPACE)
+		set (CPACK_SYSTEM_NAME "${DISTRO_CODE}_${CPACK_RPM_PACKAGE_ARCHITECTURE}")
 		set(CPACK_GENERATOR ${CPACK_GENERATOR} TGZ RPM)
-    endif()
+		set(CPACK_RPM_PACKAGE_AUTOREQ YES)
+	endif()
+
+	MESSAGE(WARNING "${CPACK_PACKAGE_VERSION}:${CPACK_DEBIAN_PACKAGE_ARCHITECTURE}:${CPACK_SYSTEM_NAME}")
+
 endif()
 
 
