--- a/plugins/Shell/CMakeLists.txt
+++ b/plugins/Shell/CMakeLists.txt
@@ -67,9 +67,7 @@ if(PYTHONLIBS_FOUND)
 		if (LINUX)
 			message (STATUS "PythonQt lib is copied along")
 			install (FILES ${PYTHONQT} DESTINATION lib)
-			list(APPEND CPACK_DEBIAN_PACKAGE_CONFLICTS "libpythonqt")
-
-			list(APPEND CPACK_DEBIAN_PACKAGE_CONFLICTS "libpythonqt2.1, libpythonqt3.0")
+			list(APPEND CPACK_DEBIAN_PACKAGE_CONFLICTS "libpythonqt, libpythonqt2.1, libpythonqt3.0")
 			message (STATUS "[${DISTRO}] Warning: .deb will conflict with ${CPACK_DEBIAN_PACKAGE_CONFLICTS}")
 
 			install(FILES ${PYTHONQT_EXAMPLES} DESTINATION share/neutrino/python/examples)
@@ -80,8 +78,8 @@ if(PYTHONLIBS_FOUND)
 		ADD_NEUTRINO_PLUGIN()
 
 		ELSE()
-		set (PYTHONQT_FOUND_COMPLETE "FALSE")
-		message(STATUS "PythonQt.h NOT FOUND (perhaps you forgot -DCMAKE_INCLUDE_PATH)")
+		    set (PYTHONQT_FOUND_COMPLETE "FALSE")
+			message(STATUS "PythonQt.h NOT FOUND (perhaps you forgot -DCMAKE_INCLUDE_PATH)")
 		ENDIF ()
 	else()
 		message(STATUS "PythonQt NOT FOUND (perhaps you forgot -DCMAKE_LIBRARY_PATH)")
