cmake cheange naming

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,9 +67,17 @@ SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.txt")
 
 # goodies for everybody
 
+if (GIT_FOUND)
+	set (CPACK_PACKAGE_NAME ${PROJECT_NAME})
+	set (CPACK_PACKAGE_VERSION "${${PROJECT_NAME}_VERSION_STRING}${${PROJECT_NAME}_VERSION_AHEAD}")
+endif()
+
+
 if (WIN32)
     # use nsis
     list(APPEND CPACK_GENERATOR NSIS ZIP)
+
+	set (CPACK_PACKAGE_VERSION "")
 
     SET(CPACK_PACKAGE_ICON "${CMAKE_CURRENT_SOURCE_DIR}/resources/icons/icon.ico")
     #SET(CPACK_NSIS_INSTALLED_ICON_NAME "bin/Neutrino.exe")
@@ -78,6 +86,7 @@ if (WIN32)
     SET(CPACK_NSIS_DISPLAY_NAME "${CPACK_PACKAGE_INSTALL_DIRECTORY} Neutrino")
     SET(CPACK_NSIS_HELP_LINK "https://github.com/NeutrinoToolkit/Neutrino")
     SET(CPACK_NSIS_URL_INFO_ABOUT "https://github.com/NeutrinoToolkit/Neutrino")
+	SET(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR}")
 
     SET(CPACK_NSIS_MODIFY_PATH ON)
     SET(CPACK_NSIS_ENABLE_UNINSTALL_BEFORE_INSTALL ON)
@@ -93,13 +102,6 @@ if (WIN32)
     install (FILES ${RUNTIME_PLATFORM_DEPS} DESTINATION bin/platforms)
 
 endif()
-
-if (GIT_FOUND)
-	set (CPACK_PACKAGE_NAME ${PROJECT_NAME})
-	set (CPACK_PACKAGE_VERSION "${${PROJECT_NAME}_VERSION_STRING}${${PROJECT_NAME}_VERSION_AHEAD}")
-	message(STATUS "Neutrino package version: ${CPACK_PACKAGE_VERSION}")
-endif()
-
 
 if (LINUX)
 
@@ -130,7 +132,7 @@ if (LINUX)
         message (STATUS "[${DISTRO}] package version: ${CPACK_DEBIAN_PACKAGE_VERSION}")
 
         execute_process(COMMAND dpkg --print-architecture OUTPUT_VARIABLE CPACK_DEBIAN_PACKAGE_ARCHITECTURE OUTPUT_STRIP_TRAILING_WHITESPACE)
-        set (CPACK_SYSTEM_NAME "${DISTRO_CODE}_${CPACK_DEBIAN_PACKAGE_ARCHITECTURE}")
+		set (CPACK_SYSTEM_NAME "${DISTRO_CODE}-${CPACK_DEBIAN_PACKAGE_ARCHITECTURE}")
         message(STATUS "[${DISTRO}] Building for architecture: ${CPACK_DEBIAN_PACKAGE_ARCHITECTURE}")
 
         # triggers
@@ -145,9 +147,6 @@ if (LINUX)
 		set(CPACK_GENERATOR ${CPACK_GENERATOR} TGZ RPM)
 		set(CPACK_RPM_PACKAGE_AUTOREQ YES)
 	endif()
-
-	MESSAGE(WARNING "${CPACK_PACKAGE_VERSION}:${CPACK_DEBIAN_PACKAGE_ARCHITECTURE}:${CPACK_SYSTEM_NAME}")
-
 endif()
 
 
@@ -157,15 +156,22 @@ if(APPLE)
 
     set(CPACK_BUNDLE_NAME "Neutrino")
     set(CPACK_BUNDLE_ICON "${CMAKE_CURRENT_SOURCE_DIR}/resources/icons/icon.icns")
-    set(CPACK_BUNDLE_PLIST "${CMAKE_CURRENT_SOURCE_DIR}/resources/neutrino.plist")
+	set(CPACK_BUNDLE_PLIST "${CMAKE_CURRENT_SOURCE_DIR}/resources/macpackage/neutrino.plist.cmake")
 
-    set(CMAKE_INSTALL_PREFIX "/Applications")
+	set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}")
     set(CPACK_GENERATOR "Bundle")
     set(CPACK_DMG_FORMAT "UDBZ")
     set(CPACK_DMG_VOLUME_NAME "${PROJECT_NAME}")
     set(CPACK_SYSTEM_NAME "OSX")
     set(CPACK_DMG_DS_STORE "${CMAKE_CURRENT_SOURCE_DIR}/resources/macPackage/DS_Store")
     set(CPACK_DMG_BACKGROUND_IMAGE "${CMAKE_CURRENT_SOURCE_DIR}/resources/macPackage/background.png")
+	SET(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CMAKE_SYSTEM_NAME}")
+
+	INSTALL(CODE "
+	   include(BundleUtilities)
+	   fixup_bundle(\"${CMAKE_BINARY_DIR}/${PROJECT_NAME}.app\"   \"\"   \"\")
+	   " COMPONENT Runtime)
+
 endif()
 
 
